Fix overflow figure

--- a/src/components/barter/list/index.sass
+++ b/src/components/barter/list/index.sass
@@ -3,6 +3,9 @@
 $item-width-max: 294px
 
 .barter-carousel-holder
+	.VueCarousel-wrapper
+		border-radius: 11px 11px 0 0
+		
 	.VueCarousel-slide
 		display: flex
 		justify-content: center
